==> apache/mynewt-core/hw/mcu/ambiq/apollo3/src/apollo3_periph.c <==
#include <assert.h>
#include <stdint.h>
#include "syscfg/syscfg.h"
#include "mcu/hal_apollo3.h"
#include "hal/hal_i2c.h"
#include "hal/hal_spi.h"
#include "bsp/bsp.h"
#include "bus/bus.h"
#include "bus/drivers/i2c_hal.h"
#include "bus/drivers/spi_apollo3.h"
#include "uart/uart.h"
#include "uart_hal/uart_hal.h"
#include <adc/adc.h>
#include <adc_apollo3/adc_apollo3.h>
#define ADC_SAMPLE_BUF_SIZE 128

static void
apollo3_periph_create_timers(void)
{
    struct apollo3_timer_cfg timer_cfg;
    int rc;

    (void) timer_cfg;
    (void) rc;

#if MYNEWT_VAL(TIMER_0)
    timer_cfg.source = MYNEWT_VAL(TIMER_0_SOURCE);
    rc = hal_timer_init(0, &timer_cfg);
    assert(rc == 0);
#endif
#if MYNEWT_VAL(TIMER_1)
    timer_cfg.source = MYNEWT_VAL(TIMER_1_SOURCE);
    rc = hal_timer_init(1, &timer_cfg);
    assert(rc == 0);
#endif

#if MYNEWT_VAL(OS_CPUTIME_TIMER_NUM) >= 0
    rc = os_cputime_init(MYNEWT_VAL(OS_CPUTIME_FREQ));
    assert(rc == 0);
#endif
}

static void
apollo3_periph_create_adc(void)
{
    int rc;

    (void)rc;

#if MYNEWT_VAL(ADC_0)
    rc = os_dev_create(&os_bsp_adc0.ad_dev, "adc0",
                       OS_DEV_INIT_KERNEL, OS_DEV_INIT_PRIO_DEFAULT,
                       apollo3_adc_dev_init, &os_bsp_adc0_config);
    assert(rc == 0);
#endif
}

static void
apollo3_periph_create_i2c(void)
{
    int rc;

    (void)rc;

#if MYNEWT_VAL(I2C_0)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_i2c_hal_dev_create("i2c0", &i2c0_bus,
                                (struct bus_i2c_dev_cfg *)&i2c0_cfg);
    assert(rc == 0);
#else
    rc = hal_i2c_init(0, (void *)&hal_i2c0_cfg);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(I2C_1)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_i2c_hal_dev_create("i2c1", &i2c1_bus,
                                (struct bus_i2c_dev_cfg *)&i2c1_cfg);
    assert(rc == 0);
#else
    rc = hal_i2c_init(1, (void *)&hal_i2c1_cfg);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(I2C_2)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_i2c_hal_dev_create("i2c2", &i2c2_bus,
                                (struct bus_i2c_dev_cfg *)&i2c2_cfg);
    assert(rc == 0);
#else
    rc = hal_i2c_init(2, (void *)&hal_i2c2_cfg);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(I2C_3)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_i2c_hal_dev_create("i2c3", &i2c3_bus,
                                (struct bus_i2c_dev_cfg *)&i2c3_cfg);
    assert(rc == 0);
#else
    rc = hal_i2c_init(3, (void *)&hal_i2c3_cfg);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(I2C_4)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_i2c_hal_dev_create("i2c4", &i2c4_bus,
                                (struct bus_i2c_dev_cfg *)&i2c4_cfg);
    assert(rc == 0);
#else
    rc = hal_i2c_init(4, (void *)&hal_i2c4_cfg);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(I2C_5)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_i2c_hal_dev_create("i2c5", &i2c5_bus,
                                (struct bus_i2c_dev_cfg *)&i2c5_cfg);
    assert(rc == 0);
#else
    rc = hal_i2c_init(5, (void *)&hal_i2c5_cfg);
    assert(rc == 0);
#endif
#endif
}

static void
apollo3_periph_create_spi(void)
{
    int rc;

    (void)rc;

#if MYNEWT_VAL(SPI_0_SLAVE)
    rc = hal_spi_init(0, (void *)&os_bsp_spi0s_cfg, HAL_SPI_TYPE_SLAVE);
    assert(rc == 0);
#endif

#if MYNEWT_VAL(SPI_0_MASTER)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_spi_apollo3_dev_create("spi0",
                                    &spi0_bus, (struct bus_spi_dev_cfg *)&spi0_cfg);
    assert(rc == 0);
#else
    rc = hal_spi_init(0, (void *)&os_bsp_spi0m_cfg, HAL_SPI_TYPE_MASTER);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(SPI_1_MASTER)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_spi_apollo3_dev_create("spi1", &spi1_bus,
                                    (struct bus_spi_dev_cfg *)&spi1_cfg);
    assert(rc == 0);
#else
    rc = hal_spi_init(1, (void *)&os_bsp_spi1m_cfg, HAL_SPI_TYPE_MASTER);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(SPI_2_MASTER)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_spi_apollo3_dev_create("spi2", &spi2_bus,
                                    (struct bus_spi_dev_cfg *)&spi2_cfg);
    assert(rc == 0);
#else
    rc = hal_spi_init(2, (void *)&os_bsp_spi2m_cfg, HAL_SPI_TYPE_MASTER);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(SPI_3_MASTER)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_spi_apollo3_dev_create("spi3", &spi3_bus,
                                    (struct bus_spi_dev_cfg *)&spi3_cfg);
    assert(rc == 0);
#else
    rc = hal_spi_init(3, (void *)&os_bsp_spi3m_cfg, HAL_SPI_TYPE_MASTER);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(SPI_4_MASTER)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_spi_apollo3_dev_create("spi4", &spi4_bus,
                                    (struct bus_spi_dev_cfg *)&spi4_cfg);
    assert(rc == 0);
#else
    rc = hal_spi_init(4, (void *)&os_bsp_spi4m_cfg, HAL_SPI_TYPE_MASTER);
    assert(rc == 0);
#endif
#endif
#if MYNEWT_VAL(SPI_5_MASTER)
#if MYNEWT_VAL(BUS_DRIVER_PRESENT)
    rc = bus_spi_apollo3_dev_create("spi5", &spi5_bus,
                                    (struct bus_spi_dev_cfg *)&spi5_cfg);
    assert(rc == 0);
#else
    rc = hal_spi_init(5, (void *)&os_bsp_spi5m_cfg, HAL_SPI_TYPE_MASTER);
    assert(rc == 0);
#endif
#endif
}

void
apollo3_periph_create(void)
{
    apollo3_periph_create_timers();
    apollo3_periph_create_adc();
    apollo3_periph_create_uart();
    apollo3_periph_create_i2c();
    apollo3_periph_create_spi();
}
